<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Layout</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="button1">Button 1</string>
    <string name="button2">Button 2</string>
    <string name="button3">Button 3</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <string name="right">right</string>
    <string name="left">left</string>
    <string name="center">center</string>
    <string name="top">top</string>
    <string name="bottom_right">bottom|right</string>
    <string name="bottom_center">bottom|center</string>
    <string name="bottom">bottom</string>


</resources>
