<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/l_username"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/username"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/l_username"
            android:layout_alignBaseline="@id/l_username"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_alignLeft="@id/username"/>

        <TextView
            android:id="@+id/l_password"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_alignBaseline="@id/password"/>

    </RelativeLayout>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>